--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "chartnew-js": "*"
   },
   "devDependencies": {
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "font-awesome": "fontawesome#~4.5.0"
   }
 }
